added media queries to style.css

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Contact | Jorge Gomez</title>
 
@@ -17,7 +18,7 @@
     <!--page header includes site navigation-->
     <header id="pgheader">
 
-        <div class="headcontainer">
+        <div class="container">
     
             <a href="index.html" id="headerName">Jorge Gomez</a>
             <nav class="navbar">
