--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>About | Jorge Gomez</title>
 
@@ -35,7 +36,7 @@
         <section class=bdycontent>
             <h1>About Me</h1>
     
-            <img src="https://picsum.photos/200/?random" alt="Profile Picture" class="profpic"/>
+            <img src="https://picsum.photos/200/200?image=1042" alt="Profile Picture" class="profpic"/>
 
             <p>Aliquip proident exercitation non ad sit commodo et nisi aute consectetur sint adipisicing labore minim. Exercitation ea dolor laborum et dolor. Nostrud elit adipisicing velit veniam sunt elit et do laborum anim. Amet dolore tempor velit irure magna voluptate tempor. Non consectetur occaecat veniam duis ullamco nostrud dolore esse aute cupidatat. Id consectetur do et consectetur quis ullamco id.</p>
             <p>Cillum voluptate Lorem veniam dolore non tempor reprehenderit laborum. Ullamco fugiat in ea enim. Lorem irure occaecat labore ipsum anim et enim consequat voluptate. Elit officia minim ex enim reprehenderit.</p>
@@ -44,7 +45,7 @@
     
     </div>
 
-    <footer>
+    <footer >
         <div class="container">
             Copyright ©
         </div>
